fix saved searches z-indexing

--- a/public/css/_page-content.sass
+++ b/public/css/_page-content.sass
@@ -1,4 +1,4 @@
-// Controllers for how various elements move/show/hide
+// Controllers for how various elements move/show/hide... sorry, this has become a bit of a shitstorm
 
 .page-content
   position: fixed
@@ -104,7 +104,7 @@ body.image-library-view
       left: 0
       right: 0
       background: rgba($xlt-grey, 0.95)
-      z-index: 200
+      z-index: 50
 
     .files-row
       margin-top: 57px
